# ade-insight

./: .gitignore  INSTALL.md  pyproject.toml
scripts/: build_exe.ps1
src/ade_insight/: __main__.py
src/ade_insight/cli/: app.py  bsen22041.py
src/ade_insight/core/: align_bsen22041.py  plot_style.py  plots.py  temp_plots.py
src/ade_insight/gui/: app.py
src/ade_insight/io/: power_txt.py  temp_csv.py
src/ade_insight/standards/bsen22041/: runner.py
src/testreport/cli/: bsen22041.py
src/testreport/core/: products.py
src/testreport/gui/: app.py
src/testreport/standards/bsen22041/: runner.py
tests/data/: Tec_50_60_CC4_M1_energy_ListMeas-20251203092727-001.txt
